# add

./: Cargo.toml  ONBOARDING.md  README.md
.github/workflows/: ci.yml
src/: config.rs  detect.rs  exec.rs  flags.rs  main.rs
src/backends/: bun.rs  mod.rs  npm.rs  pip.rs  pipenv.rs  pnpm.rs  poetry.rs  uv.rs  yarn.rs
tests/: cli.rs
